--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   web:
     build: .
     restart: always
-    command: sh /code/run_web.sh
+    command: sh /app/run_web.sh
     volumes:
-      - .:/code
+      - .:/app
     links:
       - db:db
       - redis:redis
@@ -14,6 +14,11 @@ services:
     expose:
       - 5432
       - 6379
+    environment:
+      - DB_URL=postgres://blocktimes:aG6PvGesnI@localhost/blocktimes
+      - SECRET_KEY=123
+      - ALLOWED_HOSTS=blocktimes.com
+      - BASE_URL=https://blocktimes.com/
   db:
     image: 'postgres:9.6'
     restart: always
