--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       - 5432
       - 6379
     environment:
+      - SECRET_KEY=xs(r1v@27my)yw$c+6aww0l+9h5q^dc&y%+jpiid0xbvr8jwd1
       - DB_URL=postgres://blocktimes:aG6PvGesnI@localhost/blocktimes
-      - SECRET_KEY=123
       - ALLOWED_HOSTS=blocktimes.com
       - BASE_URL=https://blocktimes.com/
   db:
