--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -4,6 +4,7 @@ Django==1.11.6
 django-admin-honeypot==1.0.0
 django-environ==0.4.4
 django-extensions==1.9.6
+django-flat-responsive==2.0
 django-redis==4.8.0
 django-render-block==0.5
 django-solo==1.1.2
