--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -1,9 +1,10 @@
 version: '2'
 services:
   web:
-    build: .
+    image: python:3.6.0
     restart: always
-    command: sh /app/run_web.sh
+    command: sh run_web.sh
+    working_dir: /app/
     volumes:
       - .:/app
     links:
@@ -11,23 +12,25 @@ services:
       - redis:redis
     ports:
       - 8000:8000
+      - 127.0.0.1:27018:27018
     expose:
       - 5432
       - 6379
     environment:
-      - SECRET_KEY=xs(r1v@27my)yw$c+6aww0l+9h5q^dc&y%+jpiid0xbvr8jwd1
-      - DB_URL=postgres://blocktimes:aG6PvGesnI@localhost/blocktimes
-      - ALLOWED_HOSTS=blocktimes.com
-      - BASE_URL=https://blocktimes.com/
+      PYTHONUNBUFFERED: 1
+      SECRET_KEY: xs(r1v@27my)yw$c+6aww0l+9h5q^dc&y%+jpiid0xbvr8jwd1
+      DB_URL: postgres://blocktimes:aG6PvGesnI@localhost/blocktimes
+      ALLOWED_HOSTS: blocktimes.com,localhost,127.0.0.1
+      BASE_URL: https://blocktimes.com/
   db:
     image: 'postgres:9.6'
     restart: always
     expose:
       - 5432
     environment:
-      - POSTGRES_DB=blocktimes
-      - POSTGRES_USER=blocktimes
-      - POSTGRES_PASSWORD=aG6PvGesnI
+      POSTGRES_DB: blocktimes
+      POSTGRES_USER: blocktimes
+      POSTGRES_PASSWORD: aG6PvGesnI
   redis:
     image: redis:latest
     expose:
