--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     environment:
       PYTHONUNBUFFERED: 1
       SECRET_KEY: xs(r1v@27my)yw$c+6aww0l+9h5q^dc&y%+jpiid0xbvr8jwd1
-      DB_URL: postgres://blocktimes:aG6PvGesnI@localhost/blocktimes
+      DB_URL: postgres://blocktimes:aG6PvGesnI@db/blocktimes
       ALLOWED_HOSTS: blocktimes.com,localhost,127.0.0.1
       BASE_URL: https://blocktimes.com/
   db:
