--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -1,27 +1,29 @@
 version: '2'
 services:
   web:
-    image: python:3.6.0
     restart: always
+    build: .
     command: sh run_web.sh
     working_dir: /app/
     volumes:
       - .:/app
     links:
       - db:db
-      - redis:redis
     ports:
       - 8000:8000
       - 127.0.0.1:27018:27018
     expose:
       - 5432
-      - 6379
+      - 8000
     environment:
       PYTHONUNBUFFERED: 1
       SECRET_KEY: xs(r1v@27my)yw$c+6aww0l+9h5q^dc&y%+jpiid0xbvr8jwd1
-      DB_URL: postgres://blocktimes:aG6PvGesnI@db/blocktimes
+      DATABASE_URL: postgres://blocktimes:Blockttt81@localhost/blocktimes
       ALLOWED_HOSTS: blocktimes.com,localhost,127.0.0.1
       BASE_URL: https://blocktimes.com/
+
+      NO_LOAD_ENV_FILE: 'yes'
+      NO_LOAD_SETTINGS_LOCAL: 'yes'
   db:
     image: 'postgres:9.6'
     restart: always
@@ -30,8 +32,4 @@ services:
     environment:
       POSTGRES_DB: blocktimes
       POSTGRES_USER: blocktimes
-      POSTGRES_PASSWORD: aG6PvGesnI
-  redis:
-    image: redis:latest
-    expose:
-      - 6379
+      POSTGRES_PASSWORD: Blockttt81
