--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -9,3 +9,4 @@ ADD . /app/
 
 
 RUN pip install -r requirements.txt
+RUN pip install -e git+https://github.com/MongoEngine/django-mongoengine#egg=django_mongoengine
