--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,20 +10,18 @@ services:
     links:
       - db:db
     ports:
-      - 8000:8000
       - 127.0.0.1:27018:27018
     expose:
       - 5432
-      - 8000
     environment:
       PYTHONUNBUFFERED: 1
       SECRET_KEY: xs(r1v@27my)yw$c+6aww0l+9h5q^dc&y%+jpiid0xbvr8jwd1
       DATABASE_URL: postgres://blocktimes:Blockttt81@db/blocktimes
       ALLOWED_HOSTS: blocktimes.com,localhost,127.0.0.1
       BASE_URL: https://blocktimes.com/
-
       NO_LOAD_ENV_FILE: 'yes'
       NO_LOAD_SETTINGS_LOCAL: 'yes'
+
   db:
     image: 'postgres:9.6'
     restart: always
@@ -33,3 +31,21 @@ services:
       POSTGRES_DB: blocktimes
       POSTGRES_USER: blocktimes
       POSTGRES_PASSWORD: Blockttt81
+
+  nginx:
+    image: 'nginx:latest'
+    volumes:
+      - ./back/run:/opt/run
+
+      - ./back/media:/var/www/html/media
+      - ./back/static:/var/www/html/static
+
+      - ./nginx/logs:/var/log/nginx
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/proxy_params:/etc/nginx/proxy_params
+      - ./nginx/static_params:/etc/nginx/static_params
+      - ./nginx/back.conf:/etc/nginx/sites-enabled/back.conf
+    links:
+      - back
+    ports:
+      - 80:80
