--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,11 @@
 user www-data;
+worker_processes 2;
 worker_processes auto;
+
 pid /run/nginx.pid;
 
 events {
-	worker_connections 768;
+	worker_connections 1024;
 }
 
 http {
