[docker] fix: Fixed domain

--- a/nginx/back.conf
+++ b/nginx/back.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name back.blocktimes.com;
+    server_name back.blocktimes.io www.back.blocktimes.io;
 
     charset utf-8;
     client_max_body_size 30m;
