--- a/crawlers/scrapy.cfg
+++ b/crawlers/scrapy.cfg
@@ -1,5 +1,8 @@
 [settings]
-default = crawlers.settings
+default = blocktimes.settings
 
 [deploy]
-project = crawlers
+url = http://127.0.0.1:6800/
+project = blocktimes
+username = scrapy
+password = secret
