--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ mongo/data/
 crawlers/setup.py
 crawlers/build/
 crawlers/*.egg-info/
+
+scrapyd/dbs/
+scrapyd/eggs/
+scrapyd/logs/
+scrapyd/twistd.pid
