--- a/nginx/back.conf
+++ b/nginx/back.conf
@@ -27,4 +27,10 @@ server {
         root $ROOT_DIR;
         include static_params;
     }
+
+    location /crawler/ {
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   Host      $http_host;
+        proxy_pass         http://127.0.0.1:8082;
+    }
 }
