--- a/nginx/back.conf
+++ b/nginx/back.conf
@@ -31,6 +31,6 @@ server {
     location /crawler/ {
         proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   Host      $http_host;
-        proxy_pass         http://127.0.0.1:8082;
+        proxy_pass         http://admin-mongo8082;
     }
 }
