[docker] fix: Added mongo-admin to nginx service depends_on

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,7 @@ services:
       - ./nginx/back.conf:/etc/nginx/sites-enabled/back.conf
     depends_on:
       - back
+      - mongo-admin
     links:
       - mongo-admin:mongo-admin
     ports:
