--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
     restart: always
     expose:
       - 27017
+    ports:
+      - 27017:27017
     volumes:
       - ./mongo/data:/data/db
     environment:
@@ -68,7 +70,6 @@ services:
       - 80:80
     expose:
       - 6800
-      - 8082
 
   scrapyd:
     build: ./scrapyd/.
@@ -88,16 +89,3 @@ services:
     volumes:
       - ./scrapyd/:/scrapyd
       - ./back/media:/var/lib/scrapyd
-
-  mongo-admin:
-    image: 0x59/admin-mongo:latest
-    expose:
-      - 8082
-    environment:
-      - PORT=8082
-      - DB_HOST=mongo
-      - CONN_NAME=mongo
-    links:
-      - mongo:mongo
-    depends_on:
-      - mongo
