--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,8 +40,6 @@ services:
     restart: always
     expose:
       - 27017
-    ports:
-      - 27017:27017
     volumes:
       - ./mongo/data:/data/db
     environment:
@@ -86,3 +84,17 @@ services:
     volumes:
       - ./scrapyd/:/scrapyd
       - ./back/media:/var/lib/scrapyd
+
+  mongoexpress:
+    image: yeasy/mongo-express
+    hostname: mongo-express
+    links:
+        - mongo:mongo
+    ports:
+        - "8081:8081"
+    restart: always
+    mem_limit: 128m
+    environment:
+        - WEB_USER='user'
+        - WEB_PASS='pass'
+    command: sh -c 'sleep 10 && tini -- node app'
