[back] chore: Uncommented django mongo admin

--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -1,7 +1,6 @@
 FROM python:3.6.0
 
-RUN mkdir /app
-RUN mkdir /app/run
+RUN mkdir -p /app/run
 RUN mkdir /app/media
 RUN mkdir /app/static
 WORKDIR /app
