[crawlers] chore: Set blocktimes.io:6800 url to scrappy settings

--- a/crawlers/scrapy.cfg
+++ b/crawlers/scrapy.cfg
@@ -2,7 +2,7 @@
 default = blocktimes.settings
 
 [deploy]
-url = http://127.0.0.1:6800/
+url = http://blocktimes.io:6800/
 project = blocktimes
 username = scrapy
 password = secret
