[docker] feat: Added mongo admin service

--- a/nginx/back.conf
+++ b/nginx/back.conf
@@ -18,6 +18,10 @@ server {
         include proxy_params;
     }
 
+    location /crawler-admin/ {
+        proxy_pass http://localhost:8081/;
+    }
+
     location /media/  {
         root $ROOT_DIR;
         include static_params;
