--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,7 @@ services:
       - 80:80
     expose:
       - 6800
+      - 8081
 
   scrapyd:
     build: ./scrapyd/.
@@ -84,3 +85,16 @@ services:
     volumes:
       - ./scrapyd/:/scrapyd
       - ./back/media:/var/lib/scrapyd
+
+  mongo_admin:
+    image: mongo-express
+    links:
+      - mongo:mongo
+    expose:
+      - 8081
+      - 27017
+    environment:
+      ME_CONFIG_MONGODB_URL: 'mongodb://mongo:27017/blocktimes'
+      ME_CONFIG_OPTIONS_EDITORTHEME: 'ambiance'
+      ME_CONFIG_BASICAUTH_USERNAME: 'admin'
+      ME_CONFIG_BASICAUTH_PASSWORD: 'NxFaXl6Zvoszs7WP1tNI'
