--- a/nginx/back.conf
+++ b/nginx/back.conf
@@ -18,7 +18,7 @@ server {
         include proxy_params;
     }
 
-    location /crawler-admin/ {
+    location /admin-secret/crawler/ {
         proxy_pass http://localhost:8081/;
     }
 
