[docker] chore: Fixed mongo admin host at back nginx config

--- a/nginx/back.conf
+++ b/nginx/back.conf
@@ -19,7 +19,7 @@ server {
     }
 
     location /admin-secret/crawler/ {
-        proxy_pass http://localhost:8081/;
+        proxy_pass http://mongo_admin:8081/;
     }
 
     location /media/  {
