--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,4 +98,4 @@ services:
       ME_CONFIG_OPTIONS_EDITORTHEME: ambiance
       ME_CONFIG_BASICAUTH_USERNAME: admin
       ME_CONFIG_BASICAUTH_PASSWORD: NxFaXl6Zvoszs7WP1tNI
-      ME_CONFIG_SITE_BASEURL: /admin-secret/crawler/
+      ME_CONFIG_SITE_BASEURL: /admin-secret/mongo/
