--- a/nginx/back.conf
+++ b/nginx/back.conf
@@ -18,7 +18,7 @@ server {
         include proxy_params;
     }
 
-    location /admin-secret/crawler/ {
+    location /admin-secret/mongo/ {
         proxy_pass http://mongo_admin:8081/;
     }
 
