--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,9 +93,10 @@ services:
     expose:
       - 8081
       - 27017
+    ports:
+      - 8081:8081
     environment:
       ME_CONFIG_MONGODB_URL: mongodb://mongo:27017/blocktimes
       ME_CONFIG_OPTIONS_EDITORTHEME: ambiance
       ME_CONFIG_BASICAUTH_USERNAME: admin
       ME_CONFIG_BASICAUTH_PASSWORD: NxFaXl6Zvoszs7WP1tNI
-      ME_CONFIG_SITE_BASEURL: /admin-secret/mongo/
