--- a/crawlers/scrapy.cfg
+++ b/crawlers/scrapy.cfg
@@ -2,7 +2,5 @@
 default = blocktimes.settings
 
 [deploy]
-url = http://blocktimes.io:6800/
+url = http://localhost:6800/
 project = blocktimes
-username = scrapy
-password = secret
