--- a/scrapyd/scrapyd.conf
+++ b/scrapyd/scrapyd.conf
@@ -1,9 +1,9 @@
 [scrapyd]
-eggs_dir    = eggs
 logs_dir    = logs
+dbs_dir     = /tmp/dbs
+eggs_dir    = /tmp/eggs
 items_dir   =
 jobs_to_keep = 5
-dbs_dir     = dbs
 max_proc    = 0
 max_proc_per_cpu = 4
 finished_to_keep = 100
