--- a/scrapyd/Dockerfile
+++ b/scrapyd/Dockerfile
@@ -1,6 +1,7 @@
 FROM yc7en/scrapyd-py3
 
 WORKDIR /scrapyd
-ADD . /scrapyd/
+ADD . /scrapyd
 
 RUN pip install -r requirements.txt
+RUN chmod +x docker-run.py
