--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,4 +1,6 @@
+amqp==2.2.2
 appnope==0.1.0
+celery==4.1.0
 decorator==4.1.2
 Django==1.11.7
 django-admin-honeypot==1.0.0
@@ -23,9 +25,12 @@ prompt-toolkit==1.0.15
 psycopg2==2.7.3.2
 ptyprocess==0.5.2
 Pygments==2.2.0
+pymongo==3.5.1
 pytz==2017.3
+redis==2.10.6
 simplegeneric==0.8.1
-six==1.11.0
+six==1.10.0
+socialshares==1.1.0
 traitlets==4.3.2
 typing==3.6.2
 wcwidth==0.1.7
