--- a/back/docker-env.ini
+++ b/back/docker-env.ini
@@ -9,4 +9,5 @@ MONGODB_HOST=mongo
 MONGODB_DB=blocktimes
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND_URL=redis://redis:6379/0
-CRAWLERS_BASE_URL='http://scrapyd:6800
+CRAWLERS_BASE_URL=http://scrapyd:6800
+MONGO_URI=mongodb://localhost/blocktimes
