--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,13 +73,14 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/proxy_params:/etc/nginx/proxy_params
       - ./nginx/static_params:/etc/nginx/static_params
-      - ./nginx/back.conf:/etc/nginx/sites-enabled/back.conf
+      - ./nginx/main.conf:/etc/nginx/sites-enabled/main.conf
+
+      - ./nginx/certs:/etc/nginx/certs
     depends_on:
       - back
     ports:
       - 80:80
-    expose:
-      - 6800
+      - 443:443
 
   scrapyd:
     build: ./scrapyd/.
