[docker] fix: Fixed ssl cert

--- a/nginx/main.conf
+++ b/nginx/main.conf
@@ -13,13 +13,12 @@ server {
     ssl on;
     server_name blocktimes.io www.blocktimes.io;
 
-    #ssl_certificate     /etc/nginx/certs/server.crt;
-    #ssl_certificate_key /etc/nginx/certs/server.key;
-    #ssl_client_certificate /etc/nginx/certs/ca.crt;
-    #ssl_verify_client on;
-
     ssl_certificate /etc/nginx/certs/main.crt;
     ssl_certificate_key /etc/nginx/certs/main.key;
+
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
 
     charset utf-8;
     client_max_body_size 30m;
