--- a/nginx/main.conf
+++ b/nginx/main.conf
@@ -1,16 +1,17 @@
+#server {
+#    listen 80;
+#    server_name blocktimes.io www.blocktimes.io;
+
+#    error_log /var/log/nginx/main-error.log;
+#    access_log /var/log/nginx/main-access.log;
+
+#    return 301 http://www.$host$request_uri;
+#}
+
 server {
+    #listen 443;
+    #ssl on;
     listen 80;
-    server_name blocktimes.io www.blocktimes.io;
-
-    error_log /var/log/nginx/main-error.log;
-    access_log /var/log/nginx/main-access.log;
-
-    return 301 http://www.$host$request_uri;
-}
-
-server {
-    listen 443;
-    ssl on;
     server_name blocktimes.io www.blocktimes.io;
 
     ssl_certificate /etc/nginx/certs/main.crt;
