--- a/nginx/main.conf
+++ b/nginx/main.conf
@@ -9,17 +9,18 @@
 #}
 
 server {
-    #listen 443;
-    #ssl on;
     listen 80;
     server_name blocktimes.io www.blocktimes.io;
 
-    ssl_certificate /etc/nginx/certs/main.crt;
-    ssl_certificate_key /etc/nginx/certs/main.key;
+    #listen 443;
+    #ssl on;
 
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+    #ssl_certificate /etc/nginx/certs/main.crt;
+    #ssl_certificate_key /etc/nginx/certs/main.key;
+
+    #ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    #ssl_prefer_server_ciphers on;
+    #ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
 
     charset utf-8;
     client_max_body_size 30m;
