Squashed commit of the following:
commit ca0b1f2f44506e67a1139696bee8a5009ff3bfef
Author: Alexei Kuzmin <DrMartiner@GMail.Com>
Date:   Thu Nov 9 23:10:23 2017 +0100

    [crawlers] chore: Used reactor at running task

commit fa6714a361559d8adf326ddc1c28138189f98a40
Author: Alexei Kuzmin <DrMartiner@GMail.Com>
Date:   Thu Nov 9 23:10:02 2017 +0100

    [crawlers] fix: Safe social at update

commit bd4f7b7fd604f757f7b102110e252e468e0fa841
Author: Alexei Kuzmin <DrMartiner@GMail.Com>
Date:   Thu Nov 9 22:48:04 2017 +0100

    [crawlers] feat: Ran all crawlers

commit 99a74b3bea468e8d28e841e2196207e756b08efe
Author: Alexei Kuzmin <DrMartiner@GMail.Com>
Date:   Thu Nov 9 22:22:07 2017 +0100

    [crawlers] chore: Changed log level

commit e2aabb24664b5cd2e091561412fe0302e44fd266
Author: Alexei Kuzmin <DrMartiner@GMail.Com>
Date:   Thu Nov 9 22:21:25 2017 +0100

    [crawlers] refact: Ran crawlers from a task

commit 55238457592339aa405e7b7f87cc32211a863a59
Author: Alexei Kuzmin <DrMartiner@GMail.Com>
Date:   Thu Nov 9 21:40:27 2017 +0100

    [crawlers] refact: Removed deploy section from scrapy.cfg

commit ec2cb8c18bbb056771f30de1a9fa0e7f1ea02442
Author: Alexei Kuzmin <DrMartiner@GMail.Com>
Date:   Thu Nov 9 21:40:08 2017 +0100

    [crawlers] refact: Removed requirements

commit 529ba7d244c3948f4e2e7e46ffbf57112ae420aa
Author: Alexei Kuzmin <DrMartiner@GMail.Com>
Date:   Thu Nov 9 21:39:58 2017 +0100

    [crawlers] refact: Removed base classes

commit acd790c4edf1113c34220025a210dbb0c7bf0896
Author: Alexei Kuzmin <DrMartiner@GMail.Com>
Date:   Thu Nov 9 21:18:22 2017 +0100

    [back] chore: Made pip freeze

commit 500b0083fc482e7a1ba22a1c0ada4e195fa109cd
Author: Alexei Kuzmin <DrMartiner@GMail.Com>
Date:   Thu Nov 9 21:18:00 2017 +0100

    [back] fix: Added BROKER_URL to settings

commit 9f86f12d09e8304d7c0420272f185f4b954d0dcc
Author: Alexei Kuzmin <DrMartiner@GMail.Com>
Date:   Thu Nov 9 20:56:11 2017 +0100

    [back] chore: Used cors app

commit 4a36b5102172848f

--- a/back/docker-env.ini
+++ b/back/docker-env.ini
@@ -9,5 +9,4 @@ MONGODB_HOST=mongo
 MONGODB_DB=blocktimes
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND_URL=redis://redis:6379/0
-CRAWLERS_BASE_URL=http://scrapyd:6800
-MONGO_URI=mongodb://localhost/blocktimes
+MONGO_URI=mongodb://mongo/blocktimes
