--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,36 +1,67 @@
-amqp==2.2.2
+amqp==1.4.9
+anyjson==0.3.3
 appnope==0.1.0
 celery==4.1.0
 decorator==4.1.2
 Django==1.11.7
 django-admin-honeypot==1.0.0
+django-celery==3.2.1
+django-cors-headers==2.1.0
 django-environ==0.4.4
 django-extensions==1.9.7
 django-flat-responsive==2.0
+django-kombu==0.9.4
 django-render-block==0.5
+django-rest-framework==0.1.0
+django-rest-framework-mongoengine==3.3.1
 django-solo==1.1.2
 django-split-settings==0.2.5
 django-templated-email==2.2.0
 django-wysiwyg-redactor==0.5.1
+djangorestframework==3.7.3
+docopt==0.6.2
+feedparser==5.2.1
 gunicorn==19.7.1
+hyperlink==17.3.1
+idna==2.6
+incremental==17.5.0
 ipython==6.2.1
 ipython-genutils==0.2.0
 jedi==0.11.0
+kombu==3.0.37
+lxml==4.1.1
+mongoengine==0.15.0
 olefile==0.44
+parsel==1.2.0
 parso==0.1.0
-pexpect==4.2.1
+pexpect==4.3.0
 pickleshare==0.7.4
 Pillow==4.3.0
 prompt-toolkit==1.0.15
 psycopg2==2.7.3.2
 ptyprocess==0.5.2
+pyasn1==0.3.7
+pyasn1-modules==0.1.5
+pycparser==2.18
+PyDispatcher==2.0.5
 Pygments==2.2.0
 pymongo==3.5.1
+pyOpenSSL==17.3.0
+python-dateutil==2.6.1
 pytz==2017.3
+queuelib==1.4.2
 redis==2.10.6
+requests==2.18.4
+Scrapy==1.4.0
+service-identity==17.0.0
 simplegeneric==0.8.1
-six==1.10.0
+six==1.11.0
 socialshares==1.1.0
 traitlets==4.3.2
+Twisted==17.9.0
 typing==3.6.2
+urllib3==1.22
+vine==1.1.4
+w3lib==1.18.0
 wcwidth==0.1.7
+zope.interface==4.4.3
