--- a/nginx/admin.conf
+++ b/nginx/admin.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name blocktimes.io www.blocktimes.io;
+    server_name admin.blocktimes.io www.admin.blocktimes.io;
 
     charset utf-8;
     client_max_body_size 30m;
@@ -10,21 +10,26 @@ server {
     error_log /var/log/nginx/main-error.log;
     access_log /var/log/nginx/main-access.log;
 
-    location /  {
+    location /api/  {
         proxy_pass http://unix:///opt/run/gunicorn.socket;
-
         gzip on;
-
         include proxy_params;
     }
 
     location /media/  {
-        root $ROOT_DIR;
+        root $ROOT_DIR/admin/;
         include static_params;
     }
 
     location /static/  {
         root $ROOT_DIR;
+        include static_params;
+    }
+
+    location / {
+        root $ROOT_DIR/admin/;
+        try_files $uri $uri/ /index.html;
+
         include static_params;
     }
 }
