--- a/admin/package.json
+++ b/admin/package.json
@@ -22,9 +22,10 @@
         "@angular/platform-browser-dynamic": "^5.0.1",
         "@angular/platform-server": "^5.0.1",
         "@angular/router": "^5.0.1",
-        "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.4",
+        "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
         "core-js": "^2.5.1",
         "font-awesome": "^4.7.0",
+        "ng-http-loader": "^0.5.1",
         "ng2-charts": "^1.6.0",
         "rxjs": "^5.4.3",
         "zone.js": "^0.8.17"
