--- a/nginx/sites-enabled/main.conf
+++ b/nginx/sites-enabled/main.conf
@@ -5,7 +5,7 @@ server {
     charset utf-8;
     client_max_body_size 30m;
 
-    set $ROOT_DIR /var/www/html/;
+    set $ROOT_DIR /var/www/html;
 
     error_log /var/log/nginx/main-error.log;
     access_log /var/log/nginx/main-access.log;
@@ -25,6 +25,12 @@ server {
 
     location /static/  {
         root $ROOT_DIR;
+        include static_params;
+    }
+
+    location / {
+        root $ROOT_DIR/front/;
+        try_files $uri $uri/ /index.html;
         include static_params;
     }
 }
