--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ services:
   back:
     restart: always
     build: ./back/.
-    command: sh docker-run.sh
+    command: sh docker-run-web.sh
+    env_file: ./back/docker-env.ini
     working_dir: /app/
     volumes:
       - ./back:/app
@@ -16,12 +17,10 @@ services:
       - redis
       - mongo
       - celery
-      - celery-beat
     expose:
       - 5432
       - 6379
       - 27017
-    env_file: ./back/docker-env.ini
 
   db:
     image: 'postgres:9.6'
@@ -94,32 +93,11 @@ services:
     build:
       context: ./back/
       dockerfile: Dockerfile-celery
-    command: celery -A project worker -l info --pidfile="run/celery.pid" --logfile="logs/celery.log"
+    command: sh docker-run-celery.sh
+    env_file: ./back/docker-env.ini
     working_dir: /app/
     volumes:
       - ./back:/app
-      - ./crawler:/crawler
-    env_file: ./back/docker-env.ini
-    links:
-      - redis:redis
-      - mongo:mongo
-    depends_on:
-      - redis
-      - mongo
-    expose:
-      - 6379
-      - 27017
-
-  celery-beat:
-    build:
-      context: ./back/
-      dockerfile: Dockerfile-celery
-    command: celery -A project beat -l info --logfile="logs/celery-beat.log" --pidfile="run/celery-beat.pid" --schedule="run/celerybeat-schedule"
-    working_dir: /app/
-    volumes:
-      - ./back:/app
-      - ./crawler:/crawler
-    env_file: ./back/docker-env.ini
     links:
       - redis:redis
       - mongo:mongo
