[docker] chore: Added url patterns

--- a/nginx/sites-enabled/admin.conf
+++ b/nginx/sites-enabled/admin.conf
@@ -10,7 +10,7 @@ server {
     error_log /var/log/nginx/admin-error.log;
     access_log /var/log/nginx/admin-access.log;
 
-    location /api/  {
+    location ~^/(api|admin|robots\.txt|sitemap\.xml)/?(.*)$ {
         proxy_pass http://unix:///opt/run/gunicorn.socket;
         gzip on;
         include proxy_params;
