--- a/nginx/sites-enabled/main.conf
+++ b/nginx/sites-enabled/main.conf
@@ -10,11 +10,9 @@ server {
     error_log /var/log/nginx/main-error.log;
     access_log /var/log/nginx/main-access.log;
 
-    location /  {
+    location ~^/(api|admin|robots\.txt|sitemap\.xml)/?(.*)$ {
         proxy_pass http://unix:///opt/run/gunicorn.socket;
-
         gzip on;
-
         include proxy_params;
     }
 
