--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,12 +1,22 @@
 amqp==1.4.9
 anyjson==0.3.3
 appnope==0.1.0
-celery==4.1.0
+asn1crypto==0.23.0
+attrs==17.3.0
+Automat==0.6.0
+billiard==3.3.0.23
+celery==3.1.25
+certifi==2017.11.5
+cffi==1.11.2
+chardet==3.0.4
+constantly==15.1.0
+cryptography==2.1.3
+cssselect==1.0.1
 decorator==4.1.2
 Django==1.11.7
-django-admin-honeypot==1.0.0
 django-celery==3.2.1
 django-cors-headers==2.1.0
+django-dynamic-fixture==1.9.5
 django-environ==0.4.4
 django-extensions==1.9.7
 django-flat-responsive==2.0
