[docker] feat: Set mongo user & password for mongodb

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,8 @@ services:
       - ./mongo/data:/data/db
     environment:
       MONGO_DATA_DIR: /data/db
+      MONGO_USER: blocktimes
+      MONGO_PASSWORD: 1Y4ZxSLoF9
 
   mongo_admin:
     image: mongo-express
