--- a/back/docker-env.ini
+++ b/back/docker-env.ini
@@ -1,12 +1,14 @@
 PYTHONUNBUFFERED=1
 SECRET_KEY=xs(r1v@27my)yw$c+6aww0l+9h5q^dc&y%+jpiid0xbvr8jwd1
 DATABASE_URL=postgres://blocktimes:Blockttt81@db/blocktimes
-ALLOWED_HOSTS=blocktimes.io,localhost,127.0.0.1
+ALLOWED_HOSTS=blocktimes.io,admin.blocktimes.io,localhost,127.0.0.1
 BASE_URL=http://blocktimes.io/
 NO_LOAD_ENV_FILE='yes'
 NO_LOAD_SETTINGS_LOCAL='yes'
 MONGODB_HOST=mongo
 MONGODB_DB=blocktimes
+MONGODB_USERNAME=blocktimes
+MONGODB_PASSWORD=1Y4ZxSLoF9
+MONGODB_URI=mongodb://blocktimes:1Y4ZxSLoF9@mongo/blocktimes
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND_URL=redis://redis:6379/0
-MONGO_URI=mongodb://mongo/blocktimes
