[crawlers] fix: Fixed mongo connection

--- a/back/docker-env.ini
+++ b/back/docker-env.ini
@@ -9,6 +9,6 @@ MONGODB_HOST=mongo
 MONGODB_DB=blocktimes
 MONGODB_USERNAME=blocktimes
 MONGODB_PASSWORD=1Y4ZxSLoF9
-MONGODB_URI=mongodb://blocktimes:1Y4ZxSLoF9@mongo/blocktimes
+MONGODB_URI=mongodb://mongo/blocktimes
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND_URL=redis://redis:6379/0
