--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,8 +67,8 @@ services:
       - ./mongo/data:/data/db
     environment:
       MONGO_DATA_DIR: /data/db
-      MONGO_USER: blocktimes
-      MONGO_PASSWORD: 1Y4ZxSLoF9
+      MONGO_ADMIN_USER: blocktimes
+      MONGO_ADMIN_PASSWORD: 1Y4ZxSLoF9
 
   mongo_admin:
     image: mongo-express
