[docker] fix: Fixed static root dir at admin Nginx conf

--- a/nginx/sites-enabled/admin.conf
+++ b/nginx/sites-enabled/admin.conf
@@ -17,7 +17,7 @@ server {
     }
 
     location /media/  {
-        root $ROOT_DIR/admin/;
+        root $ROOT_DIR;
         include static_params;
     }
 
