--- a/admin/package.json
+++ b/admin/package.json
@@ -27,6 +27,7 @@
         "core-js": "^2.5.1",
         "font-awesome": "^4.7.0",
         "froala-editor": "^2.7.1",
+        "jquery": "^3.2.1",
         "ng-http-loader": "^0.5.1",
         "ng2-charts": "^1.6.0",
         "rxjs": "^5.4.3",
