--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,26 +1,21 @@
-amqp==1.4.9
-anyjson==0.3.3
-appnope==0.1.0
+amqp==2.2.2
 asn1crypto==0.23.0
 attrs==17.3.0
 Automat==0.6.0
-billiard==3.3.0.23
-celery==3.1.25
+billiard==3.5.0.3
+celery==4.1.0
 certifi==2017.11.5
 cffi==1.11.2
 chardet==3.0.4
 constantly==15.1.0
 cryptography==2.1.3
 cssselect==1.0.1
-decorator==4.1.2
 Django==1.11.7
 django-celery==3.2.1
-django-cors-headers==2.1.0
 django-dynamic-fixture==1.9.5
 django-environ==0.4.4
 django-extensions==1.9.7
 django-flat-responsive==2.0
-django-kombu==0.9.4
 django-render-block==0.5
 django-rest-framework==0.1.0
 django-solo==1.1.2
@@ -34,23 +29,16 @@ gunicorn==19.7.1
 hyperlink==17.3.1
 idna==2.6
 incremental==17.5.0
-jedi==0.11.0
-kombu==3.0.37
+kombu==4.1.0
 lxml==4.1.1
 olefile==0.44
 parsel==1.2.0
-parso==0.1.0
-pexpect==4.3.0
-pickleshare==0.7.4
 Pillow==4.3.0
-prompt-toolkit==1.0.15
 psycopg2==2.7.3.2
-ptyprocess==0.5.2
 pyasn1==0.3.7
 pyasn1-modules==0.1.5
 pycparser==2.18
 PyDispatcher==2.0.5
-Pygments==2.2.0
 pyOpenSSL==17.3.0
 python-dateutil==2.6.1
 pytz==2017.3
@@ -58,15 +46,13 @@ queuelib==1.4.2
 redis==2.10.6
 requests==2.18.4
 Scrapy==1.4.0
+scrapy-djangoitem==1.1.1
 service-identity==17.0.0
-simplegeneric==0.8.1
 six==1.11.0
 socialshares==1.1.0
-traitlets==4.3.2
 Twisted==17.9.0
 typing==3.6.2
 urllib3==1.22
 vine==1.1.4
 w3lib==1.18.0
-wcwidth==0.1.7
 zope.interface==4.4.3
