--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -15,6 +15,7 @@ django-celery==3.2.1
 django-dynamic-fixture==1.9.5
 django-environ==0.4.4
 django-extensions==1.9.7
+django-filter==1.1.0
 django-flat-responsive==2.0
 django-render-block==0.5
 django-rest-framework==0.1.0
@@ -23,6 +24,7 @@ django-split-settings==0.2.5
 django-templated-email==2.2.0
 django-wysiwyg-redactor==0.5.1
 djangorestframework==3.7.3
+djangorestframework-filters==0.10.2
 docopt==0.6.2
 feedparser==5.2.1
 gunicorn==19.7.1
