[docker] chore: Get log stash from env

--- a/back/docker-env.ini
+++ b/back/docker-env.ini
@@ -7,3 +7,5 @@ NO_LOAD_ENV_FILE='yes'
 NO_LOAD_SETTINGS_LOCAL='yes'
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND_URL=redis://redis:6379/0
+LOGSTASH_HOST=logstash
+LOGSTASH_PORT=5000
