--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -25,6 +25,7 @@ django-templated-email==2.2.0
 django-wysiwyg-redactor==0.5.1
 djangorestframework==3.7.3
 djangorestframework-filters==0.10.2
+djangorestframework-jwt==1.11.0
 docopt==0.6.2
 feedparser==5.2.1
 gunicorn==19.7.1
@@ -32,6 +33,7 @@ hyperlink==17.3.1
 idna==2.6
 incremental==17.5.0
 kombu==4.1.0
+logstash-formatter==0.5.16
 lxml==4.1.1
 olefile==0.44
 parsel==1.2.0
@@ -41,8 +43,10 @@ pyasn1==0.3.7
 pyasn1-modules==0.1.5
 pycparser==2.18
 PyDispatcher==2.0.5
+PyJWT==1.5.3
 pyOpenSSL==17.3.0
 python-dateutil==2.6.1
+python-logstash==0.4.6
 pytz==2017.3
 queuelib==1.4.2
 redis==2.10.6
