[crawler] chore: Got FB data via key

--- a/back/docker-env.ini
+++ b/back/docker-env.ini
@@ -9,3 +9,4 @@ CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND_URL=redis://redis:6379/0
 LOGSTASH_HOST=logstash
 LOGSTASH_PORT=5000
+FB_KEY=18b8b2d2bea07409df25aec8d76333de
