[docker] fix: FIxed logstash config

--- a/log_server/logstash/pipeline/logstash.conf
+++ b/log_server/logstash/pipeline/logstash.conf
@@ -1,13 +1,11 @@
 input {
 	tcp {
 		port => 5000
-		codec => json
 	}
 
 	file {
         path => [
-           "/tmp/nginx_logs/*",
-           "/var/log/nginx/error.log"
+           "/tmp/nginx_logs/*"
         ]
         type => "nginx"
     }
