--- a/admin/package.json
+++ b/admin/package.json
@@ -30,6 +30,7 @@
         "jquery": "^3.2.1",
         "ng-http-loader": "^0.5.1",
         "ng2-charts": "^1.6.0",
+        "ngx-ui-switch": "^1.4.4",
         "rxjs": "^5.4.3",
         "zone.js": "^0.8.17"
     },
