[docker] feat: Used location /logs/ for Kibana service

--- a/log_server/kibana/config/kibana.yml
+++ b/log_server/kibana/config/kibana.yml
@@ -4,6 +4,7 @@
 #
 server.name: kibana
 server.host: "0"
+server.basePath: "/logs"
 elasticsearch.url: http://elasticsearch:9200
 
 ## Disable X-Pack
