--- a/log_server/logstash/Dockerfile
+++ b/log_server/logstash/Dockerfile
@@ -2,5 +2,7 @@
 FROM docker.elastic.co/logstash/logstash:5.6.3
 
 RUN mkdir -p /tmp/nginx_logs/
+
 # Add your logstash plugins setup here
 # Example: RUN logstash-plugin install logstash-filter-json
+RUN logstash-plugin install x-pack
