--- a/nginx/sites-enabled/main.conf
+++ b/nginx/sites-enabled/main.conf
@@ -16,6 +16,17 @@ server {
         include proxy_params;
     }
 
+    location /logs/ {
+        proxy_pass  http://kibana:5601/;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+
+    }
+
     location /media/  {
         root $ROOT_DIR;
         include static_params;
