[admin] feat: Used /admin/ location for admin

--- a/nginx/sites-enabled/main.conf
+++ b/nginx/sites-enabled/main.conf
@@ -27,6 +27,12 @@ server {
 
     }
 
+    location /admin/ {
+        alias $ROOT_DIR/admin/;
+        root $ROOT_DIR/admin/;
+        try_files $uri$args $uri$args/ /admin/index.html;
+    }
+
     location /media/  {
         root $ROOT_DIR;
         include static_params;
