--- a/admin/package.json
+++ b/admin/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve --ec true --proxy-config proxy.conf.json",
-        "build": "ng build --prod",
+        "build": "ng build --prod --base-href=/admin/",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e"
