--- a/nginx/site.conf
+++ b/nginx/site.conf
@@ -12,7 +12,6 @@ server {
 
     location / {
         proxy_pass http://unix:///opt/run/gunicorn.socket;
-        gzip on;
         include proxy_params;
     }
 
@@ -28,8 +27,7 @@ server {
     }
 
     location /admin/ {
-        alias $ROOT_DIR/admin/;
-        root $ROOT_DIR/admin/;
+        alias /var/www/html/admin/;
         try_files $uri$args $uri$args/ /admin/index.html;
     }
 
