--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,9 +89,9 @@ services:
       - 443:443
 
   elasticsearch:
-    build: ./log_server/elasticsearch/.
+    build: ./elasticsearch/.
     volumes:
-      - ./log_server/elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+      - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
     expose:
       - 9200
       - 9300
@@ -99,11 +99,11 @@ services:
       ES_JAVA_OPTS: "-Xmx256m -Xms256m"
 
   logstash:
-    build: ./log_server/logstash/.
+    build: ./logstash/.
     volumes:
       - ./nginx/logs:/tmp/nginx_logs
-      - ./log_server/logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml
-      - ./log_server/logstash/pipeline:/usr/share/logstash/pipeline
+      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml
+      - ./logstash/pipeline:/usr/share/logstash/pipeline
     expose:
       - 5000
       - 9200
@@ -114,9 +114,9 @@ services:
       - elasticsearch
 
   kibana:
-    build: ./log_server/kibana/.
+    build: ./kibana/.
     volumes:
-      - ./log_server/kibana/config/:/usr/share/kibana/config
+      - ./kibana/config/:/usr/share/kibana/config
     expose:
       - 5000
       - 5601
