--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,13 @@ services:
     restart: always
     build: ./back/.
     command: sh docker-run-web.sh
-    env_file: ./back/docker-env.ini
+    environment:
+      SECRET_KEY: xs(r1v@27my)yw$c+6aww0l+9h5q^dc&y%+jpiid0xbvr8jwd1
+      DATABASE_URL: postgres://blocktimes:Blockttt81@db/blocktimes
+      ALLOWED_HOSTS: blocktimes.io,admin.blocktimes.io,localhost,127.0.0.1
+      NO_LOAD_ENV_FILE: 'yes'
+      NO_LOAD_SETTINGS_LOCAL: 'yes'
+      FB_KEY: b13688f1ed57735b28450287606d7269
     working_dir: /app/
     volumes:
       - ./back:/app
