--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   back:
     restart: always
     build: ./back/.
-    command: sh docker-run-web.sh
+    command: sh docker-run.sh
     environment:
       SECRET_KEY: xs(r1v@27my)yw$c+6aww0l+9h5q^dc&y%+jpiid0xbvr8jwd1
       DATABASE_URL: postgres://blocktimes:Blockttt81@db/blocktimes
