--- a/logstash/Dockerfile
+++ b/logstash/Dockerfile
@@ -1,8 +1,7 @@
-# https://github.com/elastic/logstash-docker
 FROM docker.elastic.co/logstash/logstash:5.6.3
-
-RUN mkdir -p /tmp/nginx_logs/
 
 # Add your logstash plugins setup here
 # Example: RUN logstash-plugin install logstash-filter-json
+
+RUN mkdir /tmp/nginx-logs
 RUN logstash-plugin install x-pack
