--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -11,9 +11,9 @@ elasticsearch.url: http://elasticsearch:9200
 ## see https://www.elastic.co/guide/en/x-pack/current/xpack-settings.html
 ##     https://www.elastic.co/guide/en/x-pack/current/installing-xpack.html#xpack-enabling
 #
-xpack.security.enabled: true
-xpack.monitoring.enabled: true
-xpack.ml.enabled: true
-xpack.graph.enabled: true
-xpack.reporting.enabled: true
-xpack.grokdebugger.enabled: true
+xpack.security.enabled: false
+xpack.monitoring.enabled: false
+xpack.ml.enabled: false
+xpack.graph.enabled: false
+xpack.reporting.enabled: false
+xpack.grokdebugger.enabled: false
